--- a/app/views/form_section/_field_display_document.html.erb
+++ b/app/views/form_section/_field_display_document.html.erb
@@ -35,7 +35,7 @@
           <label class="key">Document Date</label>
         </div>
         <div class="medium-8 columns">
-          <% value = document["date"] || "" %>
+          <% value = field_value_for_display document["date"] || "" %>
           <span class="value"><%= value %></span>
         </div>
       </div>
