--- a/app/views/transitions/_button.html.erb
+++ b/app/views/transitions/_button.html.erb
@@ -3,6 +3,7 @@
     model_name = I18n.t("forms.record_types.#{model_class_name}")
     module_users = @module_users || []
     transition_type = type || "referral"
+    to_user_local_status_options = [I18n.t("#{transition_type}.user_local_status_pending"), I18n.t("#{transition_type}.user_local_status_accepted"), I18n.t("#{transition_type}.user_local_status_rejected")]
 
     if transition_type == "referral"
       transition_role_options = @referral_roles.map {|r| [r.name, r.id]}
@@ -51,6 +52,9 @@
             <div class='local_user_flash hide'><p class='error'></p></div>
             <label><%=I18n.t("#{transition_type}.existing_user_label")%>
               <%= select_tag("existing_user", options_for_select(module_users, ''), :include_blank => true) %>
+            </label>
+            <label><%= I18n.t("#{transition_type}.to_user_local_status_label") %>
+              <%= select_tag("to_user_local_status", options_for_select(to_user_local_status_options, ''), :include_blank => true) %>
             </label>
           </div>
           <div class="remote_toggle" style="display:none">
