JOR-122: QA4 Approvals Tick Box.
- Removed the checked atribute from the field.

--- a/app/views/approvals/_approve_form_button.html.erb
+++ b/app/views/approvals/_approve_form_button.html.erb
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="medium-12 columns">
           <label for="format"><%= t("approvals.approve_#{approval_type}_label") %></label>
-          <%= check_box_tag('approval', 'true', checked = true) %>
+          <%= check_box_tag('approval', 'true') %>
           <label form="format"><%= t('true') %></label>
         </div>
       </div>
