JOR-123: Internal Transfer Feature.
- Added permission to perform reassignment.
- Modified the `transitions/_button.html.erb` partial to only display
  the fields for the reassign form.
- Added the `Transition::TYPE_REASSIGN` constant to the Transition model.
- Modified the `TransitionActions` concern to use the `local_transfer`
  method to implement the interal transfer feature.

--- a/app/views/children/_show_child_toolbar.html.erb
+++ b/app/views/children/_show_child_toolbar.html.erb
@@ -24,6 +24,9 @@
           <%= render 'exports/custom_exports_link', model: Child, export_type: 'custom' %>
         <% end %>
         <%= render 'transitions/button', instance: @child, type: Transition::TYPE_REFERRAL %>
+        <% if can?(:reassign, controller.model_class) %>
+          <%= render 'transitions/button', instance: @child, type: Transition::TYPE_REASSIGN %>
+        <% end %>
         <%= render 'transitions/button', instance: @child, type: Transition::TYPE_TRANSFER %>
         <% if can? :edit, @child %>
             <%= render partial: 'record_shared/enable_disable_record', locals: {model: Child, instance: @child} %>
