--- a/app/views/record_shared/_actions.html.erb
+++ b/app/views/record_shared/_actions.html.erb
@@ -16,6 +16,9 @@
       %>
       <% if model == Child %>
         <%= render 'transitions/button', type: Transition::TYPE_REFERRAL %>
+        <% if can?(:reassign, controller.model_class) %>
+          <%= render 'transitions/button', type: Transition::TYPE_REASSIGN %>
+        <% end %>
         <%= render 'transitions/button', type: Transition::TYPE_TRANSFER %>
       <% end %>
       <% if can?(:sync_mobile, controller.model_class) && controller.model_class.is_syncable_with_mobile? %>
