--- a/app/views/transitions/_button.html.erb
+++ b/app/views/transitions/_button.html.erb
@@ -35,6 +35,9 @@
         <%= form_tag(url_for(:action => 'transition', :id => (defined?(instance) ? instance.id : nil)), {:multipart => true, :method => 'post', :autocomplete => "off"}) do %>
           <%= hidden_field_tag "selected_records"%>
           <%= hidden_field_tag "transition_type", transition_type%>
+          <% if transition_type == Transition::TYPE_REASSIGN %>
+            <%= t("reassign.reassign_case_title") %>
+          <% else %>
           <label class="consent">
             <span class="consent_count"><%= no_consent_count%></span>
             <%=I18n.t("#{transition_type}.consent_label")%><br />
@@ -48,14 +51,17 @@
           <label><%=I18n.t("#{transition_type}.is_remote_label")%>
             <%= check_box_tag("is_remote", "true") %>
           </label>
+          <% end %>
           <div class="local_toggle">
             <div class='local_user_flash hide'><p class='error'></p></div>
             <label><%=I18n.t("#{transition_type}.existing_user_label")%>
               <%= select_tag("existing_user", options_for_select(module_users, ''), :include_blank => true) %>
             </label>
+            <% if transition_type != Transition::TYPE_REASSIGN %>
             <label><%= I18n.t("#{transition_type}.to_user_local_status_label") %>
               <%= select_tag("to_user_local_status", options_for_select(to_user_local_status_options, ''), :include_blank => true) %>
             </label>
+            <% end %>
           </div>
           <div class="remote_toggle" style="display:none">
             <label><%=I18n.t("#{transition_type}.type_label")%>
