--- a/app/views/children/_filter.html.erb
+++ b/app/views/children/_filter.html.erb
@@ -39,7 +39,7 @@
       <%= build_filter_checkboxes(t("cases.filter_by.status"), 'child_status', Lookup.values('Case Status', @lookups)) %>
     <% end %>
     <% if filters_to_show.include? 'Age Range' %>
-      <%= build_filter_checkboxes(t("cases.filter_by.age_range"), 'age', @age_range, nil, nil, 'range') %>
+      <%= build_filter_checkboxes(t("cases.filter_by.age_range"), 'age', @age_ranges, nil, nil, 'range') %>
     <% end %>
     <% if filters_to_show.include? 'Sex' %>
       <%= build_filter_checkboxes(t("cases.filter_by.sex"), 'sex', [t("cases.filter_by.male"), t("cases.filter_by.female")]) %>
