Fixed reports with age range

--- a/app/views/reports/_editable.html.erb
+++ b/app/views/reports/_editable.html.erb
@@ -129,7 +129,7 @@
   </div>
   <div class="medium-8 columns">
     <%= form_builder.check_box :group_ages, {}, "true", "false" %>
-    <small><%= @age_ranges.join(" ") %></small>
+    <small><%= @age_ranges.join(", ") %></small>
   </div>
   <div class="medium-1 columns"> </div>
 </div>
