--- a/app/views/children/_filter.html.erb
+++ b/app/views/children/_filter.html.erb
@@ -29,7 +29,7 @@
         approvals_filters << {:approval_status_closure => {:label => t("approvals.closure"), :value => t("approvals.pending_status")}}
       end
     %>
-      <%= build_filter_checkboxes_group(t("cases.filter_by.pending_approvals"), approvals_filters) %>
+      <%= build_filter_checkboxes_group(t("cases.filter_by.pending_approvals"), approvals_filters, "approval_status") %>
     <% end %>
     <% # If user is only associated with 1 agency, there is no need to display the Agency Filter %>
     <% if (filters_to_show.include? 'Agency') && @associated_agencies.present? && @associated_agencies.count > 1 %>
