JOR-109 and JOR-110 Fix.
- Removed the 'Status' field from the Transfer/Refer modal.
- Display the 'Status' field when the transition is not remote.

--- a/app/views/form_section/_field_display_subform.html.erb
+++ b/app/views/form_section/_field_display_subform.html.erb
@@ -41,7 +41,9 @@
           %>
 
           <% (subform_section.fields.select {|field| field.showable? }).each do |field| %>
-            <%= render :partial => "form_section/field_display_#{field.display_type}",  :locals=>{:field => field, :formObject=>formObject_i} %>
+            <% unless (field.name == "to_user_local_status" && formObject_i.is_remote == true) || (field.name == "to_user_local_status" && formObject_i.type == Transition::TYPE_REASSIGN) %>
+              <%= render :partial => "form_section/field_display_#{field.display_type}",  :locals=>{:field => field, :formObject=>formObject_i} %>
+            <% end %>
           <% end %>
           </fieldset>
         </div>
