--- a/app/views/form_section/_select_box.html.erb
+++ b/app/views/form_section/_select_box.html.erb
@@ -23,7 +23,7 @@
     <% elsif select_box.searchable_select %>
       <%= select_tag name, options_for_select(select_box.select_options(formObject, @lookups, @locations), value),
           'class' => 'chosen-select', 'data-placeholder' => t("fields.chosen_placeholder"), :id => field_id,
-          :data => { :field_tags => field_tags}, required: select_box.required %>
+          :data => { :field_tags => field_tags}, required: select_box.required, :disabled => select_box.disabled %>
     <% else %>
       <%
         #TODO: We should combine single and multi selects and simplify this code
