--- a/app/views/children/_filter.html.erb
+++ b/app/views/children/_filter.html.erb
@@ -20,8 +20,9 @@
     <% if filters_to_show.include? 'My Cases'
       filter = []
       filter << {:owned_by => {:label => t("cases.filter_by.my_cases"), :value => @current_user.user_name }}
+      filter << {:assigned_user_names => {:label => t("cases.filter_by.referred_cases"), :value => @current_user.user_name }}
       %>
-      <%= build_filter_checkboxes_group(t("cases.filter_by.my_cases"), filter, 'owned_by') %>
+      <%= build_filter_checkboxes_group(t("cases.filter_by.my_cases"), filter) %>
     <% end %>
     <% if filters_to_show.include? 'Approvals' %>
       <%
