--- a/app/views/children/_show_child_toolbar.html.erb
+++ b/app/views/children/_show_child_toolbar.html.erb
@@ -30,9 +30,9 @@
         <%= render 'transitions/button', instance: @child, type: Transition::TYPE_TRANSFER %>
         <% if can? :edit, @child %>
             <%= render partial: 'record_shared/enable_disable_record', locals: {model: Child, instance: @child} %>
-        <% end %>
-        <% if can?(:edit, @child)  && @child.child_status != 'Open'%>
-            <%= render partial: 'record_shared/reopen_record', locals: {model: Child, instance: @child} %>
+          <% if @child.child_status != 'Open'%>
+              <%= render partial: 'record_shared/reopen_record', locals: {model: Child, instance: @child} %>
+          <% end %>
         <% end %>
         <% if can?(:sync_mobile, controller.model_class) && controller.model_class.is_syncable_with_mobile? %>
           <%= render 'record_shared/mark_for_mobile_button', instance: @child, mobile_value: true  %>
