added admin level to locations list table.  Disable/Enable admin level select when parent selection changes in the location new/edit

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -14,7 +14,7 @@
 <% end %>
 
 <div class="row">
-  <%= form_for @location, :html => { :class => 'default-form', :autocomplete => "off" } do |f| %>
+  <%= form_for @location, :html => { :class => 'default-form location-new-edit', :autocomplete => "off" } do |f| %>
     <fieldset class="no-border">
       <%= f.error_messages :header_tag => :h2 %>
       <div class="row">
