--- a/app/views/children/_filter.html.erb
+++ b/app/views/children/_filter.html.erb
@@ -22,7 +22,7 @@
       filters << {:owned_by => {:label => t("cases.filter_by.my_cases"), :value => @current_user.user_name }}
       filters << {:assigned_user_names => {:label => t("cases.filter_by.referred_cases"), :value => @current_user.user_name }}
       %>
-      <%= build_filter_checkboxes_group(t("cases.filter_by.my_cases"), filters. "my_cases") %>
+      <%= build_filter_checkboxes_group(t("cases.filter_by.my_cases"), filters, "my_cases") %>
     <% end %>
     <% if filters_to_show.include? 'Approvals' %>
       <%
