--- a/app/views/home/_case_manager_case_totals.html.erb
+++ b/app/views/home/_case_manager_case_totals.html.erb
@@ -11,6 +11,10 @@
       <div class="scrollable">
         <%= render 'case_manager_totals_by_worker', stats: @aggregated_case_manager_stats[:worker_totals], model: model %>
       </div>
+      <div class="stat_title"><%= t("dashboard.approvals") %></div>
+      <div class="scrollable">
+        <%= render 'case_manager_totals_by_approval_type', stats: @aggregated_case_manager_stats[:approval_types], model: model %>
+      </div>
       <div class="stat_title"><%= t("dashboard.referrals_by_social_worker") %></div>
       <div class="scrollable">
         <%= render 'case_manager_totals_by_referred', stats: @aggregated_case_manager_stats[:referred_totals], model: model %>
