--- a/app/views/form_section/_field_display_subform.html.erb
+++ b/app/views/form_section/_field_display_subform.html.erb
@@ -5,11 +5,17 @@
    shared_subform_section_group = subform_section.shared_subform_group
    number_of_subforms = subforms_count formObject, subform, form_group_name
    data_shared_subform = ""
+
    if shared_subform_section.present?
      data_shared_subform = "data-is_shared_subform=true data-shared_subform=#{subform_section.shared_subform}"
    end
    if number_of_subforms > 0
      subform_object = get_subform_object(formObject, subform_section, form_group_name, subform.name) || get_subform_object(formObject, shared_subform_section, shared_subform_section_group, subform.name)
+   end
+   if subform.name == "transitions"
+     #binding.pry
+     #overwrite
+     #number_of_subforms = new_number
    end
 %>
 <% if number_of_subforms == 0 %>
