--- a/app/views/home/_case_counts.html.erb
+++ b/app/views/home/_case_counts.html.erb
@@ -14,6 +14,12 @@
         </tr>
         <tr>
           <td>
+            <div class="stat_title"><%= t("dashboard.case_stat_by_approval_type") %></div>
+            <%= render 'case_count_by_approval_type', stats: @stats, model: model %>
+          </td>
+        </tr>
+        <tr>
+          <td>
             <div class="stat_title"><%= t('dashboard.case_stat_by_assessment_level') %></div>
             <%= render 'case_count_risk_totals', stats: @stats, model: model %>
           </td>
