--- a/app/views/form_section/_field_display_subform.html.erb
+++ b/app/views/form_section/_field_display_subform.html.erb
@@ -13,9 +13,8 @@
      subform_object = get_subform_object(formObject, subform_section, form_group_name, subform.name) || get_subform_object(formObject, shared_subform_section, shared_subform_section_group, subform.name)
    end
    if subform.name == "transitions"
-     #binding.pry
-     #overwrite
-     #number_of_subforms = new_number
+     # Recalculate the amount of subforms
+     number_of_subforms = subform_object.count
    end
 %>
 <% if number_of_subforms == 0 %>
