--- a/app/views/form_section/_subform_expand_collapse_header.html.erb
+++ b/app/views/form_section/_subform_expand_collapse_header.html.erb
@@ -88,6 +88,23 @@
     <% end %>
   </div>
   <div class="medium-5 columns">
+    <% if view_mode %>
+      <% subform_instance = formObject.send(subform_name)[i] %>
+      <% if subform_instance.instance_of?(Transition) && !subform_instance.is_remote && subform_instance.type == Transition::TYPE_TRANSFER && subform_instance.is_transfer_in_progress? && subform_instance.is_assigned_to_user_local?(@current_user.user_name) %>
+        <%= render :partial => "transitions/transition_status_button",
+                                  locals: { :transition_id => subform_instance.id,
+                                            :transition_status => t("transfer.#{Transition::TO_USER_LOCAL_STATUS_ACCEPTED}", :locale => :en),
+                                            :button_label => t('buttons.accept'),
+                                            :transfer_dialog_text => t("transfer.accept_label"),
+                                            :dialog_key => 'accept' } %>
+        <%= render :partial => "transitions/transition_status_button",
+                                  locals: { :transition_id => subform_instance.id,
+                                            :transition_status => t("transfer.#{Transition::TO_USER_LOCAL_STATUS_REJECTED}", :locale => :en),
+                                            :button_label => t('buttons.reject'),
+                                            :transfer_dialog_text => t("transfer.reject_label"),
+                                            :dialog_key => 'reject' } %>
+      <% end %>
+    <% end %>
     <span class="collapse_expand_subform expanded <%=summary_section_class%>" style="<%=disable_action_buttons%>">-</span>
     <% if !subform.disabled %>
       <%= link_to t('fields.remove'), '', class: "subform_remove grey-button", style: disable_action_buttons,
