--- a/app/views/home/_case_manager_transfers.html.erb
+++ b/app/views/home/_case_manager_transfers.html.erb
@@ -1,16 +1,10 @@
+<% stats.each do |k, v| %>
 <div>
-  <%= I18n.translate('dashboard.manager_count_pending_total',
-                     case_count(
-                       {
-                         name: :transfers,
-                         stat: :pending,
-                         filter: index_filters(['child_status=Open', 'transfer_status=In Progress' ,'record_state=true'])
-                       }, stats, model)).html_safe %>
-  <%= I18n.translate('dashboard.manager_count_rejected_total',
-                     case_count(
-                       {
-                         name: :transfers,
-                         stat: :rejected,
-                         filter: index_filters(['child_status=Open', 'transfer_status=Rejected' ,'record_state=true'])
-                       }, stats, model)).html_safe %>
+  <%= I18n.translate('dashboard.manager_transfers_totals',
+      case_count(
+        {  count: v[:total_cases],
+           stat_type: k,
+           filter: index_filters(['child_status=Open', 'transfer_status=In Progress' ,'record_state=true'])
+        }, nil, model)).html_safe %>
 </div>
+<% end %>
