--- a/app/views/home/_case_manager_transfers.html.erb
+++ b/app/views/home/_case_manager_transfers.html.erb
@@ -4,7 +4,7 @@
       case_count(
         {  count: v[:total_cases],
            stat_type: k,
-           filter: index_filters(['child_status=Open', 'transfer_status=In Progress' ,'record_state=true'])
+           filter: index_filters(['child_status=Open', "transfer_status=#{k}" ,'record_state=true'])
         }, nil, model)).html_safe %>
 </div>
 <% end %>
