--- a/app/views/home/_case_count_transfers_by_status.html.erb
+++ b/app/views/home/_case_count_transfers_by_status.html.erb
@@ -20,3 +20,15 @@
                                                 'record_state=true'])
                        }, stats, model)).html_safe %>
 </div>
+<div>
+  <%= I18n.translate("dashboard.count_waiting_for_acceptance_transfers",
+                     case_count(
+                       {
+                         name: :in_progress_transfers,
+                         stat: :in_progress,
+                         filter: index_filters(['child_status=Open',
+                                                "transfer_status=#{I18n.t("referral.#{Transition::TO_USER_LOCAL_STATUS_INPROGRESS}",
+                                                                          :locale => :en)}",
+                                                'record_state=true'])
+                       }, stats, model)).html_safe %>
+</div>
