JOR-177 and JOR-179.
Fixed translation.
Fixed scrollbars on caseworker dashboard.
Fixed the transfers waiting for acceptance filter parameter.

--- a/app/views/home/_case_count_transfers_by_status.html.erb
+++ b/app/views/home/_case_count_transfers_by_status.html.erb
@@ -29,6 +29,7 @@
                          filter: index_filters(['child_status=Open',
                                                 "transfer_status=#{I18n.t("referral.#{Transition::TO_USER_LOCAL_STATUS_INPROGRESS}",
                                                                           :locale => :en)}",
-                                                'record_state=true'])
+                                                'record_state=true',
+                                                'transferred_to_users'])
                        }, stats, model)).html_safe %>
 </div>
