--- a/app/views/home/_case_count_transfers_by_status.html.erb
+++ b/app/views/home/_case_count_transfers_by_status.html.erb
@@ -7,7 +7,8 @@
                          filter: index_filters(['child_status=Open',
                                                 "transfer_status=#{I18n.t("referral.#{Transition::TO_USER_LOCAL_STATUS_INPROGRESS}",
                                                                           :locale => :en)}",
-                                                'record_state=true'])
+                                                'record_state=true',
+                                                "owned_by=#{current_user.user_name}"])
                        }, stats, model)).html_safe %>
   <%= I18n.translate("dashboard.count_rejected_transfers",
                      case_count(
