--- a/app/views/form_section/_field_display_subform.html.erb
+++ b/app/views/form_section/_field_display_subform.html.erb
@@ -11,10 +11,13 @@
    end
    if number_of_subforms > 0
      subform_object = get_subform_object(formObject, subform_section, form_group_name, subform.name) || get_subform_object(formObject, shared_subform_section, shared_subform_section_group, subform.name)
-     if subform.name == "transitions"
-       # Recalculate the amount of subforms
-       number_of_subforms = subform_object.count
-     end
+     #TODO: This code is being temporarily removed until JOR-141 
+     #      (users should only see their own referrals) is again revisited,
+     #      Pending a full refactor of how we do nested forms headers  
+     # if subform.name == "transitions"
+     #   # Recalculate the amount of subforms
+     #   number_of_subforms = subform_object.count
+     # end
    end
 %>
 <% if number_of_subforms == 0 %>
@@ -41,7 +44,8 @@
                                subform_section: subform_section,
                                i: i,
                                form_group_name: form_group_name,
-                               view_mode: true
+                               view_mode: true,
+                               subform_object: formObject_i
                              }
           %>
 
