--- a/app/views/children/_filter.html.erb
+++ b/app/views/children/_filter.html.erb
@@ -24,6 +24,10 @@
       %>
       <%= build_filter_checkboxes_group(t("cases.filter_by.my_cases"), filters, "my_cases") %>
     <% end %>
+    <% if filters_to_show.include? 'No Activity' %>
+      <%= build_filter_checkboxes(t("cases.filter_by.3month_inactivity"), 'last_updated_at', @inactive_range, nil, nil, 'range') %>
+    <% end %>
+
     <% if filters_to_show.include? 'Approvals' %>
       <% ['pending', 'approved', 'rejected'].each do |status| %>
         <%
