--- a/app/views/approvals/_button.html.erb
+++ b/app/views/approvals/_button.html.erb
@@ -2,16 +2,22 @@
   <%= link_to t("buttons.request_approval"), '#', class: 'has_sub', onclick: 'return false;' %>
   <ul style="display:none;">
     <li>
-      <%= link_to t("approvals.bia"), '#', data: {"reveal-id" => "bia_approvals"} %>
-      <%= render partial: 'approvals/approve_record', locals: {approval_type: "bia", model: model, instance: instance} %>
+      <% if can?(:request_approval_bia, controller.model_class) %>
+        <%= link_to t("approvals.bia"), '#', data: {"reveal-id" => "bia_approvals"} %>
+        <%= render partial: 'approvals/approve_record', locals: {approval_type: "bia", model: model, instance: instance} %>
+      <% end %>
     </li>
     <li>
-      <%= link_to t("approvals.care_plan"), '#', data: {"reveal-id" => "case_plan_approvals"} %>
-      <%= render partial: 'approvals/approve_record', locals: {approval_type: "case_plan", model: model, instance: instance} %>
+      <% if can?(:request_approval_case_plan, controller.model_class) %>
+        <%= link_to t("approvals.care_plan"), '#', data: {"reveal-id" => "case_plan_approvals"} %>
+        <%= render partial: 'approvals/approve_record', locals: {approval_type: "case_plan", model: model, instance: instance} %>
+      <% end %>
     </li>
     <li>
-      <%= link_to t("approvals.closure"), '#', data: {"reveal-id" => "closure_approvals"} %>
-      <%= render partial: 'approvals/approve_record', locals: {approval_type: "closure", model: model, instance: instance} %>
+      <% if can?(:request_approval_closure, controller.model_class) %>
+        <%= link_to t("approvals.closure"), '#', data: {"reveal-id" => "closure_approvals"} %>
+        <%= render partial: 'approvals/approve_record', locals: {approval_type: "closure", model: model, instance: instance} %>
+      <% end %>
     </li>
   </ul>
 </li>
