--- a/app/views/children/_show_child_toolbar.html.erb
+++ b/app/views/children/_show_child_toolbar.html.erb
@@ -38,7 +38,7 @@
           <%= render 'record_shared/mark_for_mobile_button', instance: @child, mobile_value: true  %>
           <%= render 'record_shared/mark_for_mobile_button', instance: @child, mobile_value: false  %>
         <% end %>
-        <% if can?(:request_approval, controller.model_class) %>
+        <% if can?(:request_approval_bia, controller.model_class) || can?(:request_approval_case_plan, controller.model_class) || can?(:request_approval_closure, controller.model_class) %>
           <%= render partial: 'approvals/button', locals: {model: Child, instance: @child} %>
         <% end %>
         <% if can?(:approve_bia, controller.model_class) || can?(:approve_case_plan, controller.model_class) || can?(:approve_closure, controller.model_class) %>
