--- a/app/views/home/_case_counts.html.erb
+++ b/app/views/home/_case_counts.html.erb
@@ -13,20 +13,21 @@
             <%= render 'case_count_transfers_by_status', stats: @stats, model: model %>
           </td>
         </tr>
-        <tr>
-          <td>
-            <div class="stat_title"><%= t("dashboard.case_stat_by_approval_type") %></div>
-            <%= render 'case_count_by_approval_type', stats: @stats, model: model %>
-          </td>
-        </tr>
-        <% if false %>
-        <%# TODO: Temprariliy commenting out the risk level dashboards until they are configurable %>
-        <tr>
-          <td>
-            <div class="stat_title"><%= t('dashboard.case_stat_by_assessment_level') %></div>
-            <%= render 'case_count_risk_totals', stats: @stats, model: model %>
-          </td>
-        </tr>
+        <% if @display_approvals %>
+          <tr>
+            <td>
+              <div class="stat_title"><%= t("dashboard.case_stat_by_approval_type") %></div>
+              <%= render 'case_count_by_approval_type', stats: @stats, model: model %>
+            </td>
+          </tr>
+        <% end %>
+        <% if @display_assessment %>
+          <tr>
+            <td>
+              <div class="stat_title"><%= t('dashboard.case_stat_by_assessment_level') %></div>
+              <%= render 'case_count_risk_totals', stats: @stats, model: model %>
+            </td>
+          </tr>
         <% end %>
         <tr>
           <td>
