--- a/app/views/children/_filter.html.erb
+++ b/app/views/children/_filter.html.erb
@@ -29,7 +29,7 @@
         <%
           approval_filters =  []
           approval_filters << {:approval_status_bia => {:id => "#{status}_bia", :label => t("approvals.bia"), :value => t("approvals.status.#{status}")}} if filters_to_show.include? 'cp_bia_form'
-          approval_filters << {:approval_status_case_plan => {:id => "#{status}_case_plan", :label => t("approvals.care_plan"), :value => t("approvals.status.#{status}")}} if filters_to_show.include? 'cp_case_plan'
+          approval_filters << {:approval_status_case_plan => {:id => "#{status}_case_plan", :label => t("approvals.case_plan"), :value => t("approvals.status.#{status}")}} if filters_to_show.include? 'cp_case_plan'
           approval_filters << {:approval_status_closure => {:id => "#{status}_closure", :label => t("approvals.closure"), :value => t("approvals.status.#{status}")}} if filters_to_show.include? 'closure_form'
         %>
         <%= build_filter_checkboxes_group(t("cases.filter_by.approvals.#{status}"), approval_filters, "approval_status") %>
