--- a/app/views/home/_case_manager_totals_by_approval_type.html.erb
+++ b/app/views/home/_case_manager_totals_by_approval_type.html.erb
@@ -1,31 +1,36 @@
-
-<div>
-  <%= I18n.translate("dashboard.count_pending_approval_total",
-                     case_count(
-                       {
-                         name: :approval_type,
-                         stat: :bia,
-                         filter: index_filters(['child_status=Open', 'approval_status_bia=Pending', 'record_state=true']),
-                         stat_type: 'BIA'
-                       }, stats, model)).html_safe %>
-</div>
-<div>
-  <%= I18n.translate("dashboard.count_pending_approval_total",
-                     case_count(
-                       {
-                         name: :approval_type,
-                         stat: :case_plan,
-                         filter: index_filters(['child_status=Open', 'approval_status_case_plan=Pending', 'record_state=true']),
-                         stat_type: 'Care Plan'
-                       }, stats, model)).html_safe %>
-</div>
-<div>
-  <%= I18n.translate("dashboard.count_pending_approval_total",
-                     case_count(
-                       {
-                         name: :approval_type,
-                         stat: :closure,
-                         filter: index_filters(['child_status=Open', 'approval_status_closure=Pending', 'record_state=true']),
-                         stat_type: 'Closure'
-                       }, stats, model)).html_safe %>
-</div>
+<% if @can_approval_bia %>
+  <div>
+    <%= I18n.translate("dashboard.count_pending_approval_total",
+                       case_count(
+                         {
+                           name: :approval_type,
+                           stat: :bia,
+                           filter: index_filters(['child_status=Open', 'approval_status_bia=Pending', 'record_state=true']),
+                           stat_type: "#{I18n.t('approvals.bia')}"
+                         }, stats, model)).html_safe %>
+  </div>
+<% end %>
+<% if @can_approval_case_plan %>
+  <div>
+    <%= I18n.translate("dashboard.count_pending_approval_total",
+                       case_count(
+                         {
+                           name: :approval_type,
+                           stat: :case_plan,
+                           filter: index_filters(['child_status=Open', 'approval_status_case_plan=Pending', 'record_state=true']),
+                           stat_type: "#{I18n.t('approvals.case_plan')}"
+                         }, stats, model)).html_safe %>
+  </div>
+<% end %>
+<% if @can_approval_closure %>
+  <div>
+    <%= I18n.translate("dashboard.count_pending_approval_total",
+                       case_count(
+                         {
+                           name: :approval_type,
+                           stat: :closure,
+                           filter: index_filters(['child_status=Open', 'approval_status_closure=Pending', 'record_state=true']),
+                           stat_type: "#{I18n.t('approvals.closure')}"
+                         }, stats, model)).html_safe %>
+  </div>
+<% end %>
