Fixed link to the repo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="inner">
   <a id="big-logo" class="logo icon-logo" href="{{site.baseurl}}/" title="Primero"></a>
     <h2>Primero. An information management platform for humanitarian case management and incident monitoring</h2>
-    <a href="https://github.com/primeroIMS/hello.world" class="button"><small>View project on</small> GitHub</a>
+    <a href="https://github.com/primeroIMS/primero" class="button"><small>View project on</small> GitHub</a>
 
     <ul id="navbar">
       <li><a href="{{site.baseurl}}/">Home</a></li>
