--- a/app/views/form_section/_select_box.html.erb
+++ b/app/views/form_section/_select_box.html.erb
@@ -41,18 +41,19 @@
       <%= select_tag name, options_for_select(select_box_select_options, value), :id => field_id,
           :data => { :field_tags => field_tags}, :disabled => select_box.disabled, :required => select_box.required %>
     <% end %>
-    <% if select_box.guiding_questions.present? %>
-      <%= link_to(t('buttons.guiding_questions'), '', class: 'gq_popovers', tabindex: '0',
-                  data: {
-                      toggle: 'popover',
-                      trigger: 'focus',
-                      title: t('buttons.guiding_questions'),
-                      html: true
-                  }) %>
-      <div class='popover_content' style="display:none;">
-        <%=  select_box.guiding_questions %>
-      </div>
-    <% end %>
+    <div class="gq_select">
+      <% if select_box.guiding_questions.present? %>
+        <%= link_to(t('buttons.guiding_questions'), '', class: 'gq_select_popovers', tabindex: '0', role: 'button',
+                    data: {
+                        toggle: 'popover',
+                        trigger: 'focus',
+                        title: t('buttons.guiding_questions'),
+                        html: true,
+                        placement: 'bottom',
+                        content: select_box.guiding_questions
+                    }) %>
+      <% end %>
+    </div>
     <% if select_box.help_text.present? %><p class="help"><%= select_box.help_text  %></p><% end %>
   </div>
 </div>
