--- a/app/views/form_section/_radio_button.html.erb
+++ b/app/views/form_section/_radio_button.html.erb
@@ -20,18 +20,19 @@
         <br>
       <% end %>
     <% end %>
-    <% if radio_button.guiding_questions.present? %>
-      <%= link_to(t('buttons.guiding_questions'), '', class: 'gq_popovers', tabindex: '0',
-            data: {
-              toggle: 'popover',
-              trigger: 'focus',
-              title: t('buttons.guiding_questions'),
-              html: true
-            }) %>
-      <div class='popover_content' style="display:none;">
-        <%=  radio_button.guiding_questions %>
-      </div>
-    <% end %>
+    <div class="gq_select">
+      <% if radio_button.guiding_questions.present? %>
+        <%= link_to(t('buttons.guiding_questions'), '', class: 'gq_select_popovers', tabindex: '0', role: 'button',
+                    data: {
+                        toggle: 'popover',
+                        trigger: 'focus',
+                        title: t('buttons.guiding_questions'),
+                        html: true,
+                        placement: 'bottom',
+                        content: radio_button.guiding_questions
+                    }) %>
+      <% end %>
+    </div>
     <p class="help"><%= radio_button.help_text if radio_button.help_text.present? %></p>
   </div>
 </div>
