--- a/app/views/form_section/_field_display_document.html.erb
+++ b/app/views/form_section/_field_display_document.html.erb
@@ -1,3 +1,6 @@
+<%
+  doc_type = field.upload_document_type || 'document'
+%>
 <% if formObject[form_id].present? %>
   <div class="uploaded-documents">
     <% formObject[form_id].each do |document| %>
@@ -12,7 +15,7 @@
       </div>
       <div class="row">
         <div class="medium-4 columns">
-          <label class="key">Is this the current document?</label>
+          <label class="key"><%=I18n.t("fields.file_upload_box.#{doc_type}.current_document_label")%></label>
         </div>
         <div class="medium-8 columns">
           <% value = document["is_current"]
@@ -23,7 +26,7 @@
       </div>
       <div class="row">
         <div class="medium-4 columns">
-          <label class="key">Document Name</label>
+          <label class="key"><%=I18n.t("fields.file_upload_box.#{doc_type}.document_name_label")%></label>
         </div>
         <div class="medium-8 columns">
           <% value = document["document_description"] || "" %>
@@ -32,7 +35,7 @@
       </div>
       <div class="row">
         <div class="medium-4 columns">
-          <label class="key">Document Date</label>
+          <label class="key"><%= I18n.t("fields.file_upload_box.#{doc_type}.document_date_label")%></label>
         </div>
         <div class="medium-8 columns">
           <% value = field_value_for_display document["date"] || "" %>
@@ -41,7 +44,7 @@
       </div>
       <div class="row">
         <div class="medium-4 columns">
-          <label class="key">Comments</label>
+          <label class="key"><%=I18n.t("fields.file_upload_box.#{doc_type}.comment_label")%></label>
         </div>
         <div class="medium-8 columns">
           <% value = document["comments"] || "" %>
